<resources>
    <string name="app_name">Mr. Passwords</string>

    <string name="user_login">User Login</string>
    <string name="Welcome_Header">Welcome To Mr. Password</string>
    <string name="Button_sign_in">sign in</string>
    <string name="button_create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mr. Password</string>
    <string name="nav_header_subtitle">Keep Your Passwords safe and secure</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_passwords">Passwords</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_gpassword">Generate Passwords</string>
    <string name="logout">Logout</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_password_name">Enter Password Name</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="save_password">save password</string>
    <string name="enter_password_details">Enter Password Details</string>
</resources>